<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mis Lugares</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_1_str">Mostrar Lugares</string>
    <string name="btn_2_str">Preferencias</string>
    <string name="btn_3_str">Acerca de</string>
    <string name="btn_4_str">Salir</string>
    <string name="lbl_name">Nombre:</string>
    <string name="hint_name">algo que identifique el lugar</string>
    <string name="lbl_type">Tipo:</string>
    <string name="lbl_direction">Direccion:</string>
    <string name="hint_direction">dirección del lugar</string>
    <string name="lbl_Telephone">Teléfono:</string>
    <string name="hint_telephone">teléfono para contactar</string>
    <string name="lbl_url">URL:</string>
    <string name="hint_url">página Web</string>
    <string name="lbl_Coment">Comentario:</string>
    <string name="hint_coment">introduce tus notas</string>
    <string name="header_about">Acerca De...</string>
    <string name="header_preferences">Preferencias</string>
    <string name="header_vistaLugar">Lugar</string>
    <string name="header_edicionLugar">Edicion</string>

</resources>
