<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/lbl_name"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/nombre"
            android:hint="@string/hint_name"
            android:layout_weight="1"
            android:inputType="textPersonName" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lbl_type"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tipo"
                >

            </Spinner>

            </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/lbl_direction"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/direccion"
            android:hint="@string/hint_direction"
            android:inputType="textPostalAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_Telephone"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/telefono"
                android:hint="@string/hint_telephone"
                android:inputType="phone" />

            </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/lbl_url"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/url"
            android:hint="@string/hint_url"
            android:inputType="textWebEditText" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/lbl_Coment"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/comentario"
            android:hint="@string/hint_coment"
            android:inputType="textMultiLine" />




        </LinearLayout>

    </ScrollView>
